# hand_control_linux

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile
.github/workflows/: ci.yml
build_all/: CMakeCache.txt  DartConfiguration.tcl
build_all/src/merai/: DartConfiguration.tcl
config/: ethercat_config.json  robot_parameters.json
docs/: TODO.md
src/communication/src/: CommConfig.cpp  CommManager.cpp  MessageProtocol.cpp  WebSocketServer.cpp  main.cpp
src/control/: CMakeLists.txt
src/control/cmake/: controlConfig.cmake.in  seven_axis_robot_controlConfig.cmake.in
src/control/include/control/: Control.h  ControlData.h  ControlTypes.h  ControllerManager.h  DriveStateManager.h
src/control/include/control/controllers/: BaseController.h  GravityCompController.h  HomingController.h  JointJogController.h  JointTrajectoryController.h
src/control/include/control/hardware_abstraction/: BaseHAL.h  RealHAL.h  SimHAL.h
src/control/services/: control.service
src/control/src/: Control.cpp  ControllerManager.cpp  DriveStateManager.cpp  main.cpp
src/control/src/controllers/: GravityCompController.cpp  HomingController.cpp  JointJogController.cpp  JointTrajectoryController.cpp
src/control/src/hardware_abstraction/: RealHAL.cpp  SimHAL.cpp
src/control/tests/: ControllerManagerTests.cpp
src/control_logic/: CMakeLists.txt
src/control_logic/control/: CMakeLists.txt
src/control_logic/control/include/control/: Control.h  ControllerManager.h  DriveStateManager.h
src/control_logic/control/include/control/bridge_controllers/: BaseBridgingController.h  TorqueToPositionBridgingController.h  TrajectoryAlignBridgingController.h
src/control_logic/control/include/control/controllers/: AdmittanceController.h  BaseController.h  GravityCompController.h  HomingController.h  JointTrajectoryController.h  TeleOpController.h
src/control_logic/control/include/control/hardware_abstraction/: BaseHAL.h  DriveData.h  IHardwareAbstractionLayer.h  MockHardwareAbstractionLayer.h  RealHAL.h  RealHardwareAbstractionLayer.h  SimHAL.h
src/control_logic/control/src/: Control.cpp  ControllerManager.cpp  DriveStateManager.cpp  main.cpp
src/control_logic/control/src/bridge_controllers/: TorqueToPositionBridgingController.cpp  TrajectoryAlignBridgingController.cpp
src/control_logic/control/src/controllers/: AdmittanceController.cpp  GravityCompController.cpp  HomingController.cpp  JointTrajectoryController.cpp  TeleOpController.cpp
src/control_logic/control/src/hardware_abstraction/: MockHardwareAbstractionLayer.cpp  RealHAL.cpp  RealHardwareAbstractionLayer.cpp  SimHAL.cpp
src/control_logic/logic/: CMakeLists.txt
src/control_logic/logic/include/logic/: ErrorManager.h  Logic.h  LogicTypes.h  SafetyManager.h  StateMachine.h  SystemOrchestrator.h
src/control_logic/logic/src/: ErrorManager.cpp  Logic.cpp  SafetyManager.cpp  StateMachine.cpp  SystemOrchestrator.cpp  main.cpp
src/control_logic/services/: logic.service
src/core/: CMakeLists.txt
src/core/math_lib/include/math_lib/: EulerAngles.h  Matrix.h  MatrixVectorOps.h  Quaternion.h  RotationMatrix.h  Vector.h
src/core/math_lib/src/: MatrixVectorOps.cpp
src/core/robotics_lib/include/robotics_lib/haptic_device/: HapticDeviceDynamics.h  HapticDeviceKinematics.h  HapticDeviceModel.h
src/core/robotics_lib/include/robotics_lib/six_axis/: SixAxisDynamics.h  SixAxisKinematics.h  SixAxisModel.h
src/core/robotics_lib/src/haptic_device/: HapticDeviceDynamics.cpp  HapticDeviceKinematics.cpp  HapticDeviceModel.cpp
src/core/robotics_lib/src/six_axis/: SixAxisDynamics.cpp  SixAxisKinematics.cpp  SixAxisModel.cpp
src/fieldbus/: CMakeLists.txt  README.md
src/fieldbus/cmake/: fieldbusConfig.cmake.in
src/fieldbus/include/fieldbus/: EthercatMaster.h
src/fieldbus/include/fieldbus/drives/: BaseDrive.h  IODrive.h  IoDrive.h  ServoDrive.h
src/fieldbus/scripts/: postinst
src/fieldbus/services/: fieldbus.service
src/fieldbus/src/: EthercatMaster.cpp  main.cpp
src/fieldbus/src/drives/: IODrive.cpp  IoDrive.cpp  ServoDrive.cpp
src/logic/: CMakeLists.txt
src/logic/cmake/: logicConfig.cmake.in
src/logic/include/logic/: ErrorManager.h  Logic.h  LogicData.h  LogicTypes.h  SafetyManager.h  StateMachine.h
src/logic/scripts/: postinst
src/logic/services/: logic.service
src/logic/src/: ErrorManager.cpp  Logic.cpp  SafetyManager.cpp  StateMachine.cpp  main.cpp
src/merai/: CMakeLists.txt  README.md
src/merai/cmake/: meraiConfig.cmake.in
src/merai/include/merai/: Enums.h  FixedString.h  ParameterServer.h  RAII_SharedMemory.h  RTIpc.h  RTMemoryLayout.h  SharedLogger.h  Watchdog.h
src/merai/scripts/: merai
src/merai/services/: launcher.service  logger.service  merai_stack.target
src/merai/src/: Launcher.cpp  LoggerProcess.cpp  ParameterServer.cpp  RAII_SharedMemory.cpp  Watchdog.cpp
src/merai/tests/: LoggerTests.cpp  ParameterServerTests.cpp  RTIpcTests.cpp
src/network/: CMakeLists.txt
src/network/include/network_api/: HapticDeviceAPI.h  NetworkAPI.h  UDPSession.h
src/network/scripts/: postinst
src/network/services/: network_api.service
src/network/src/: HapticDeviceAPI.cpp  NetworkAPI.cpp  UDPSession.cpp  main.cpp
src/network/tests/: test_network_api.cpp
src/network_api/: CMakesLists.txt
src/network_api/src/: HapticDeviceAPI.cpp  (+3 more)
src/planner/: CMakeLists.txt  README.md
src/planner/cmake/: plannerConfig.cmake.in
src/planner/include/planner/: JointTrajectoryPlanner.h  PlannerApp.h
src/planner/scripts/: postinst
src/planner/services/: planner.service
src/planner/src/: JointTrajectoryPlanner.cpp  PlannerApp.cpp  main.cpp
src/robotics/: CMakeLists.txt
src/robotics/cmake/: robot_coreConfig.cmake.in
src/robotics/math_lib/include/math_lib/: EulerAngles.h  Matrix.h  MatrixVectorOps.h  Quaternion.h  RotationMatrix.h  Vector.h
src/robotics/math_lib/src/: MatrixVectorOps.cpp
src/robotics/robotics_lib/include/robotics_lib/: RobotDynamics.h  RobotKinematics.h  RobotModel.h
src/robotics/robotics_lib/src/: RobotDynamics.cpp  RobotKinematics.cpp  RobotModel.cpp
src/robotics/scripts/: postinst
(+9 files in other folders)
